--- a/airbnb-ssr/package.json
+++ b/airbnb-ssr/package.json
@@ -9,13 +9,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "element-plus": "^2.5.1",
     "vue": "^3.3.11",
     "vue-router": "^4.0.13"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
     "@vitejs/plugin-vue": "^4.5.2",
+    "auto-import": "^0.1.4",
     "typescript": "^5.2.2",
+    "unplugin": "^1.6.0",
+    "unplugin-auto-import": "^0.17.3",
+    "unplugin-vue-components": "^0.26.0",
     "vite": "^5.0.8",
     "vue-tsc": "^1.8.25"
   }
