--- a/airbnb-ssr/package.json
+++ b/airbnb-ssr/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
+    "@types/vue": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
     "@vitejs/plugin-vue": "^4.5.2",
     "auto-import": "^0.1.4",
@@ -24,6 +25,7 @@
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-vue": "^9.20.1",
+    "sass": "^1.69.7",
     "typescript": "^5.3.3",
     "unplugin": "^1.6.0",
     "unplugin-auto-import": "^0.17.3",
