--- a/airbnb-ssr/package.json
+++ b/airbnb-ssr/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.5",
     "element-plus": "^2.5.1",
     "vue": "^3.3.11",
     "vue-router": "^4.0.13"
