--- a/airbnb-ssr/package.json
+++ b/airbnb-ssr/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.6.5",
     "element-plus": "^2.5.1",
     "vue": "^3.3.11",
+    "vue-i18n": "^9.9.0",
     "vue-router": "^4.0.13"
   },
   "devDependencies": {
